fixed overflow hidden and some margin & padding styles for mapnav

--- a/src/assets/App.scss
+++ b/src/assets/App.scss
@@ -9,10 +9,19 @@
 body {
 	background-color: $white;
 	font-family: "Karla", sans-serif;
+	max-height: 100vh;
+	max-width: 100vw;
+	overflow: hidden;
 }
 
 p {
 	margin-bottom: 0.25rem;
+}
+
+.search-input {
+	border: none;
+	min-width: 200px;
+	max-width: 300px;
 }
 
 .placeListItem {
